--- a/ClassSchedulingProject/Views/Home/myAccount.cshtml
+++ b/ClassSchedulingProject/Views/Home/myAccount.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UserInformation
 @{
 }
-<div class="container">
+<div style="max-width: 1200px; padding: 20px;">
     <h4>Current Sessions</h4>
     <div class="table-responsive">
     <table class="table table-bordered">
