download schedule as a csv functionality added

--- a/ClassSchedulingProject/Views/Home/Index.cshtml
+++ b/ClassSchedulingProject/Views/Home/Index.cshtml
@@ -129,6 +129,7 @@
 <script src="/lib/react/reactDev.js" crossorigin></script>
 <script src="/lib/react/reactDomDev.js" crossorigin></script>
 <script src="/lib/react/babel7189.js"></script>
+<script src="/js/convertTableToCSV.js"></script>
 <script>
 var newCalender;
 let caldata = {
