--- a/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
+++ b/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
@@ -14,6 +14,15 @@ input[type=range] {
  input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
  }
+ input[type=range]::-moz-slider-thumb {
+   width: 2em;
+   height: 2em;
+   margin-top: 0;
+   background-color: #16a085;
+   border-radius: 1em;
+   border: 2px solid rgba(255, 255, 255, 0.5);
+   cursor: pointer;
+ }
  input[type=range]:focus {
    outline: none !important;
    border: none;
