--- a/ClassSchedulingProject/Views/Home/Index.cshtml
+++ b/ClassSchedulingProject/Views/Home/Index.cshtml
@@ -13,42 +13,17 @@
     }
 }
 <style>
- #menuBar {
-   display: block;
-   position: fixed;
-   height: 28px;
-   width: calc(100% - 2px); /*Compensate for body 1px border*/
-   background: #f3f3f3;
-   z-index: 100;
-   width: 100%;
-   bottom: 0;
- }
- .status {
-    padding-left: 8px;
-    opacity: .7;
-    font-size: 12px;
-}
-.sLoading {
-    display: inline-block;
-    position: relative;
-    background-image: url("./img/animation.gif");
-    background-size: contain;
-    /* background: blue; */
-    top: 4px;
-    left: 4px;
-    height: 18px;
-    width: 18px;
-    z-index: 2;
- }
 </style>
 <div id="menuBar">
-    <span id="s1" class="status"></span>
-    <span id="s2" class="status"></span>
-    <span class="status">|</span>
-    <span id="s3" class="status"></span>
-    <span style="position:absolute; right:20px;bottom:0px; width:205px">
-        <span class="status" style="position:relative; top: -3px;">Scale :</span> 
-        <input style="position:relative;width: 150px;top: 2px" type="range" id="viewSizeRangeSlider"  step="1" max="5" min="1" value="4" onchange="renderCalendar()">
+    <span id="leftGroupingsMenuBar">
+        <span id="s1" class="status"></span>
+        <span id="s2" class="status"></span>
+        <span id="rightGroupingSep" class="status">|</span>
+        <span id="s3" class="status"></span>
+    </span>
+    <span class = "scaleContainer" style="position:absolute; right:20px;bottom:0px; width:205px">
+        <span class="status scaleLabel" style="position:relative; top: -3px;">Scale :</span> 
+        <input class="scaleInput" style="position:relative;width: 150px;top: 2px" type="range" id="viewSizeRangeSlider"  step="1" max="5" min="1" value="4" onchange="renderCalendar()">
     </span>
 </div>
 <div style="padding-left: 20px; overflow:hidden; max-width: 100%;">
@@ -102,7 +77,7 @@
             <div id='listView' style="display: none" class="table-responsive"></div>
             <br />
         </div>
-        <div id="panel2"  class="col-lg-5">
+        <div id="panel2"  class="col-lg-5 listPanel">
             <div class="accordion" id="accordionFilteredEvents">
                 <div id="filteredEvents"></div>
             </div>
