--- a/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
+++ b/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
@@ -119,3 +119,90 @@ input[type=range] {
 .listViewTable {
    font-size: 12px;
 }
+#menuBar {
+   display: block;
+   position: fixed;
+   height: 28px;
+   width: calc(100% - 2px); /*Compensate for body 1px border*/
+   background: #f3f3f3;
+   z-index: 100;
+   width: 100%;
+   bottom: 0;
+ }
+ .status {
+    padding-left: 8px;
+    opacity: .7;
+    font-size: 12px;
+}
+.sLoading {
+    display: inline-block;
+    position: relative;
+    background-image: url("/img/animation.gif");
+    background-size: contain;
+    /* background: blue; */
+    top: 4px;
+    left: 4px;
+    height: 18px;
+    width: 18px;
+    z-index: 2;
+ }
+@media only screen and (max-width: 699px) {
+   #addEventPopUp{
+      position: fixed;
+      top: 0px!important;
+      width: 100%;
+      height: 100vh;
+      overflow: scroll;
+   }
+   .popup {
+      position: fixed;
+      font-size: 14px;
+      top: 0px;
+      left: 0px;
+      background-color: inherit;
+      color: #000;
+      padding: 10px;
+      z-index: 999;
+      -webkit-box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.27); 
+      box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.27);
+      overflow-y: scroll;
+   }
+   .popup > .container {
+      margin: 0;
+      padding: 0;
+      left: 5px!important;
+   } 
+   .status {
+      position: relative;
+      top: 4px;
+      padding-left: 3px;
+      opacity: .9;
+      font-size: 8px;
+      letter-spacing: 0px;
+  }
+  .scaleContainer {
+      right: 10px!important;
+      width: 75px!important;
+   }
+   .scaleLabel {
+      display: none!important;
+   }
+   .scaleInput{
+      width: 75px!important;
+   }
+   #leftGroupingsMenuBar{
+      max-width: calc(100% - 75px)!important;
+      overflow-x: scroll!important;
+   }
+   #s2{
+      display: none;
+   }
+   #rightGroupingSep{
+      display: none;
+   }
+ }
+ @media only screen and (max-width: 991px){
+   .listPanel {
+      margin-top: 25px;
+   }
+ }
