linking instructor names to their events pop up

--- a/ClassSchedulingProject/Views/Home/Index.cshtml
+++ b/ClassSchedulingProject/Views/Home/Index.cshtml
@@ -92,6 +92,9 @@
         </div>
     </div>
 </div>
+<div id="userEventListPopup">
+
+</div>
 
 <link rel="stylesheet" href="/css/calendarAppDefaults.css" />
 <link rel="stylesheet" href="/libCal_f/main.css" />
@@ -130,12 +133,6 @@ document.getElementById("role").innerText = function() {
 </script>
 <script src="/js/Components.jsx" type="text/babel"></script>
 <script src="/js/main.jsx" type="text/babel"></script>
-@* @if(thisUser.AccountFlag < 2){
-    <script type="text/babel">
-        const EventTemplates = ReactDOM.createRoot(document.getElementById("EventTemplates"));
-        EventTemplates.render(<EventTemplateComponent CourseOfferings={caldata.EventTemplates} />);
-    </script>
-} *@
 <script type="text/babel">
 
 </script>
