--- a/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
+++ b/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
@@ -67,6 +67,11 @@ input[type=range] {
    width:700px;
    overflow: hidden;
 }
+#EventsByUserPopUp {
+   background: white;
+   height: fit-content;
+   width: 640px;
+}
 .popup {
    position: fixed;
    font-size: 14px;
@@ -153,6 +158,15 @@ input[type=range] {
       width: 100%;
       height: 100vh;
       overflow: scroll;
+   }
+   #EventsByUserPopUp {
+      position: fixed;
+      top: 0px!important;
+      bottom: 0px!important;
+      left: 0px!important;
+      right: 0px!important;
+      height: 100vh!important;
+      width: 100%!important;
    }
    .popup {
       position: fixed;
