--- a/ClassSchedulingProject/Views/Home/Index.cshtml
+++ b/ClassSchedulingProject/Views/Home/Index.cshtml
@@ -97,6 +97,9 @@
 </div>
 
 <link rel="stylesheet" href="/css/calendarAppDefaults.css" />
+@if((String)ViewData["theme"] == "1") {
+    <link rel="stylesheet" href="/css/darkTheme.css" />
+}
 <link rel="stylesheet" href="/libCal_f/main.css" />
 <script src="/libCal_f/main.js"></script>
 <script src="/js/app.js"></script>
