--- a/ClassSchedulingProject/Views/Home/Login.cshtml
+++ b/ClassSchedulingProject/Views/Home/Login.cshtml
@@ -90,3 +90,6 @@
         </div>            
     </main>
 </div>
+@if((String)ViewData["theme"] == "1") {
+    <link rel="stylesheet" href="/css/darkTheme.css" />
+}
