--- a/ClassSchedulingProject/Views/Home/myAccount.cshtml
+++ b/ClassSchedulingProject/Views/Home/myAccount.cshtml
@@ -37,3 +37,6 @@ function logout(e) {
     })
 }
 </script>
+@if((String)ViewData["theme"] == "1") {
+    <link rel="stylesheet" href="/css/darkTheme.css" />
+}
