--- a/ClassSchedulingProject/Views/Home/Register.cshtml
+++ b/ClassSchedulingProject/Views/Home/Register.cshtml
@@ -76,3 +76,6 @@
         </div>            
     </main>
 </div>
+@if((String)ViewData["theme"] == "1") {
+    <link rel="stylesheet" href="/css/darkTheme.css" />
+}
