--- a/ClassSchedulingProject/Views/Shared/_Layout.cshtml
+++ b/ClassSchedulingProject/Views/Shared/_Layout.cshtml
@@ -9,37 +9,56 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <a class="navbar-brand" href="/">Class Scheduler</a>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <a class="navbar-brand" href="/">Class Scheduler</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                <ul class="navbar-nav flex-grow-1">
+        <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+            <form class="form-inline my-2 my-lg-0">
+                DarkMode&nbsp&nbsp
+                @if((String)ViewData["theme"] == "1"){
+                    <input type="checkbox" onchange="changeTheme()" checked data-toggle="toggle" data-size="xs">
+                }else{
+                    <input type="checkbox" onchange="changeTheme()" data-toggle="toggle" data-size="xs">
+                }
+                
+            </form>
+            <ul class="navbar-nav flex-grow-1">
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="/">Home</a>
+                </li>
+                @if(ViewBag.isAuthorized != 1)
+                {
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="/">Home</a>
+                        <a class="nav-link text-dark" href="/register">Register</a>
                     </li>
-                    @if(ViewBag.isAuthorized != 1)
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/register">Register</a>
-                        </li>
-                    }
-                    else
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/myAccount">My Account</a>
-                        </li>
-                    }
-                </ul>
-            </div>
-        </nav>
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="/myAccount">My Account</a>
+                    </li>
+                }
+            </ul>
+        </div>
+    </nav>
     </header>
     @RenderBody()
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
     @RenderSection("Scripts", required: false)
+    <script>
+        function changeTheme(){
+            fetch("/home/toggleTheme").then(data => data.json).then(function(){
+                window.location.href = `/`;
+                console.log("dfdf")
+            })
+        }
+    </script>
 </body>
 </html>
