--- a/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
+++ b/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
@@ -48,7 +48,7 @@ input[type=range] {
    width: 100%;
    cursor: pointer;
    height: 1em;
-   border-bottom: 2px solid rgba(0, 0, 0, 0.5);
+   border-bottom: 2px solid rgba(80, 80, 80, 0.5);
    background-color: transparent;
  }
 .fc-timegrid-slot {
@@ -152,12 +152,28 @@ input[type=range] {
     z-index: 2;
  }
 @media only screen and (max-width: 699px) {
+    #addEventPopUp::-webkit-scrollbar {
+      display: none;
+   }
+   #EventsByUserPopUp::-webkit-scrollbar {
+      display: none;
+   }
+   
+   #addEventPopUp, #EventsByUserPopUp {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+   } 
    #addEventPopUp{
       position: fixed;
       top: 0px!important;
+      bottom: 0px!important;
+      left: 0px!important;
+      right: 0px!important;
       width: 100%;
-      height: 100vh;
-      overflow: scroll;
+      height: calc(100vh);
+      padding-bottom: 200px;
+      padding-right: 20px;
+      overflow-y: scroll;
    }
    #EventsByUserPopUp {
       position: fixed;
@@ -165,8 +181,9 @@ input[type=range] {
       bottom: 0px!important;
       left: 0px!important;
       right: 0px!important;
-      height: 100vh!important;
+      height: calc(100vh)!important;
       width: 100%!important;
+      overflow-y: scroll;
    }
    .popup {
       position: fixed;
