--- a/ClassSchedulingProject/Views/Home/Index.cshtml
+++ b/ClassSchedulingProject/Views/Home/Index.cshtml
@@ -16,7 +16,9 @@
 </style>
 <div id="menuBar">
     <span id="leftGroupingsMenuBar">
-        <span id="s1" class="status"></span>
+    <div id="s1" style="display : none" class="spinner-border spinner-border-sm status sLoading" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
         <span id="s2" class="status"></span>
         <span id="rightGroupingSep" class="status">|</span>
         <span id="s3" class="status"></span>
