--- a/ClassSchedulingProject/Views/Home/Index.cshtml
+++ b/ClassSchedulingProject/Views/Home/Index.cshtml
@@ -48,15 +48,15 @@
                       <option selected>Select Year</option>
                         @foreach(int year in AvailableYears)
                         {
-                            <option value="@year">@year</option>
+                            <option value="@year">@(year-1) - @year</option>
                         }
                     </select>
                     <select id="qSel" class="custom-select-sm" style="margin-top: 0px; margin-bottom: 25px;" onchange="fetchNewCalendar(this)">
                       <option selected>Select Quarter</option>
-                      <option value="1">Winter</option>
-                      <option value="2">Spring</option>
-                      <option value="3">Summer</option>
-                      <option value="4">Fall</option>
+                      <option value="1">Fall</option>
+                      <option value="2">Winter</option>
+                      <option value="3">Spring</option>
+                      <option value="4">Summer</option>
                     </select>
                     <select id="building" class="custom-select-sm" style="margin-bottom: 25px;" onchange="fetchNewCalendar(this)">
                       <option selected>Select Building</option>
@@ -122,8 +122,8 @@ let caldata = {
     ProgramName: "",
     EventTemplates: [],
     institutionID: "@thisUser.PrimaryInstitutionId",
-    role: @thisUser.AccountFlag,
 }
+const role = @thisUser.AccountFlag;
 let userList = JSON.parse('@Html.Raw(ViewBag.userList)')
 document.getElementById("role").innerText = function() { 
     switch (caldata.role) {
