--- a/ClassSchedulingProject/Views/Home/myAccount.cshtml
+++ b/ClassSchedulingProject/Views/Home/myAccount.cshtml
@@ -22,7 +22,7 @@
                 <td>@session.Device</td>
                 <td>@session.LastUsed.ToString()</td>
                 <td>@session.Created.ToString()</td>
-                <td><a href="#" id="@session.Id" onclick="logout(this)">Logout</a></td>
+                <td><a href="#" id="@session.SessionId" onclick="logout(this)">Logout</a></td>
             </tr>       
         }
       </tbody>
