event warnings and error checking display
you are allowed to do the wrong things. it will just yell at you and display a clear warning that what you are doing should not be happening.

feature needs to be extended further.

--- a/ClassSchedulingProject/Views/Home/waitingForAccountActivation.cshtml
+++ b/ClassSchedulingProject/Views/Home/waitingForAccountActivation.cshtml
@@ -15,7 +15,7 @@
                 <tr>
                     <td>@admin.FirstName @admin.LastName</td>
                     <td>@admin.PrimaryInstitution.InstitutionName</td>
-                    <td>@admin.Department.DepartmentName No.@admin.DepartmentId</td>
+                    <td>@admin.Department.DepartmentName Dpt.@admin.DepartmentId</td>
                     <td>@admin.PrimaryEmail</td>
                 </tr>
             }
