--- a/ClassSchedulingProject/Views/Shared/_Layout.cshtml
+++ b/ClassSchedulingProject/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                 }
                 @if((int)ViewData["role"] < 3){
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="/manageProgram">Manage Program and Courses</a>
+                        <a class="nav-link text-dark" href="/manageProgram">Manage Program and Users</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="/myAccount">Manage App Settings</a>
