--- a/ClassSchedulingProject/Views/Home/Index.cshtml
+++ b/ClassSchedulingProject/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
         <input class="scaleInput" style="position:relative;width: 150px;top: 2px" type="range" id="viewSizeRangeSlider"  step="1" max="5" min="1" value="4" onchange="renderCalendar()">
     </span>
 </div>
-<div style="padding-left: 20px; overflow:hidden; max-width: 100%;">
+<div style="padding-left: 20px; overflow:hidden; max-width: 1600px;">
     <div class="row">
         <div class="col">
             <h2>@thisUser.PrimaryInstitution.InstitutionName</h2>
@@ -36,44 +36,42 @@
             <a href="#" onclick="createUserEventListPopUp(caldata.userAccountID)">View all my assigned events</a>
             <p>Your department: @thisUser.Department.DepartmentName, Role : <span id="role"></span></p>
                 <span>
-                    <select id="viewStyle" class="custom-select-sm" style="margin-top: 0px;" onchange="changeView(this)">
+                    <select id="viewStyle" class="custom-select-sm" style="margin-bottom:10px" onchange="changeView(this)">
                       <option value="1" selected>Calendar</option>
                       <option value="2">List View</option>
                     </select>
-                    <select id="dptSel" class="custom-select-sm" style="margin-top: 0px;" onchange="fetchEventTemplates(this)">
+                    <select id="dptSel" class="custom-select-sm" style="margin-bottom:10px" onchange="fetchEventTemplates(this)">
                       @foreach(ProgramOfferings program in thisUser.Department.ProgramOfferings){
                         <option value="@program.Id">@program.ProgramName @program.ProgramType</option>
                       }
                     </select>
-                    <select id="yearSel" class="custom-select-sm" style="margin-top: 0px;" onchange="fetchNewCalendar(this)">
+                    <select id="yearSel" class="custom-select-sm" style="margin-bottom:10px" onchange="fetchNewCalendar(this)">
                       <option selected>Select Year</option>
                         @foreach(int year in AvailableYears)
                         {
                             <option value="@year">@(year-1) - @year</option>
                         }
                     </select>
-                    <select id="qSel" class="custom-select-sm" style="margin-top: 0px;" onchange="fetchNewCalendar(this)">
+                    <select id="qSel" class="custom-select-sm" style="margin-bottom:10px" onchange="fetchNewCalendar(this)">
                       <option selected>Select Quarter</option>
                       <option value="1">Fall</option>
                       <option value="2">Winter</option>
                       <option value="3">Spring</option>
                       <option value="4">Summer</option>
                     </select>
-                    <select id="building" class="custom-select-sm" style=" onchange="fetchNewCalendar(this)">
+                    <select id="building" class="custom-select-sm" style="margin-bottom:10px" onchange="fetchNewCalendar(this)">
                       <option selected>Select Building</option>
                       <option value="J">J</option>
                     </select>
-                    <select id="room" class="custom-select-sm" style=" onchange="fetchNewCalendar(this)">
+                    <select id="room" class="custom-select-sm" style="margin-bottom:10px" onchange="fetchNewCalendar(this)">
                       <option selected>Select Room</option>
                       <option value="108">108</option>
                       <option value="111">111</option>
                       <option value="112">112</option>
                       <option value="114">114</option>
                     </select>
-                </span>
-                <div style="margin-bottom:25px; margin-top: 10px">
                     <input id="isActiveToggle" data-off="Active" data-on="Locked" data-onstyle="danger" data-offstyle="primary" type="checkbox" onchange="toggleCalendarState()" data-toggle="toggle" data-size="xs" checked disabled>
-                </div>
+                </span>
         </div>
     </div>
     <p id="helpPage"></p>
@@ -99,8 +97,8 @@
     </div>
 </div>
 <div id="userEventListPopup">
-
 </div>
+<div id="EventWarnings"></div>
 
 <link rel="stylesheet" href="/css/calendarAppDefaults.css" />
 <link rel="stylesheet" href="/libCal_f/main.css" />
@@ -131,6 +129,7 @@ var _isActive = 1;
 const userAccountID = "@thisUser.EventsAuthorId";
 const role = @thisUser.AccountFlag;
 let userList = JSON.parse('@Html.Raw(ViewBag.userList)')
+const _theme = @ViewData["theme"];
 document.getElementById("role").innerText = function() { 
     switch (role) {
         case 0: return "Admin"; break;
@@ -151,3 +150,22 @@ function toggleCalendarState(){
 <script src="/js/Components.jsx" type="text/babel"></script>
 <script src="/js/main.jsx" type="text/babel"></script>
 <script src="/js/helpPage.jsx" type="text/babel"></script>
+@if(thisUser.AccountFlag < 3){
+    <script>
+        function toggleCalendarState(){
+            if(role > 2) return;
+            if(dontAssert) return;
+            fetch(`/home/toggleCalendarState?year=${elements.year.val()}&quarter=${elements.quarter.val()}&programID=${Number(elements.dpt.val())}`).then(data => data.json()).then(function(data){
+                _isActive = data;
+                newCalender = new CalenderApp(caldata);
+                fetchData();
+            })
+        } 
+    </script>
+}else{
+    <script>
+        function toggleCalendarState(){
+
+        } 
+    </script>
+}
