--- a/ClassSchedulingProject/wwwroot/css/darkTheme.css
+++ b/ClassSchedulingProject/wwwroot/css/darkTheme.css
@@ -65,18 +65,23 @@
  }
  .fc-timegrid-event-harness, .fc-timegrid-event-harness-inset, .fc-timegrid-event, .fc-v-event, .fc-event, .fc-event-draggable, .fc-event-resizable, .fc-event-start, .fc-event-end, .fc-event-past {
     box-shadow: none!important;
+    border: solid 1px rgb(44, 44, 44);
+    border-radius: 3px;
  }
  .fc-event-main{
     color: rgb(231, 231, 231)!important;
  }
- .fc-timegrid-col-events {
+ /* .fc-timegrid-col-events {
     position: relative;
     width: 100%!important;
     left: -2px!important;
  }
  .fc ::-webkit-scrollbar {
     display: none;
- }
+ } */
+ #EventWarnings {
+   background: rgba(0, 0, 0, 0.144)!important;
+}
  .fc  {
     -ms-overflow-style: none;
     scrollbar-width: none; 
